--- a/{{ cookiecutter.project_slug }}/frontend_app/package.json
+++ b/{{ cookiecutter.project_slug }}/frontend_app/package.json
@@ -19,9 +19,9 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": ". ./set_dev_env_vars.sh && node check_environment.js && react-scripts start",
-    "build": "node check_environment.js && react-scripts build",
-    "test": ". ./set_dev_env_vars.sh && node check_environment.js && react-scripts test",
+    "start": ". ./set_dev_env_vars.sh && react-scripts start",
+    "build": "react-scripts build",
+    "test": ". ./set_dev_env_vars.sh && react-scripts test",
     "eject": "react-scripts eject",
     "prettier": " prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
