Add content-security-protection config for the frontend app via headers configured in nginx.

--- a/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
@@ -28,6 +28,8 @@ nginx_vhosts:
     root: "{{ frontend_app_root }}/current/"
     index: "index.html"
     extra_parameters: |
+      add_header Content-Security-Policy "default-src 'self';";
+
       location /static {
           # serve static files as normal
       }
