Add security hardening headers in the nginx configuration for the frontend app.

--- a/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
@@ -29,6 +29,9 @@ nginx_vhosts:
     index: "index.html"
     extra_parameters: |
       add_header Content-Security-Policy "default-src 'self';";
+      add_header X-Frame-Options deny;
+      add_header X-Content-Type-Options nosniff;
+      add_header X-XSS-Protection "1; mode=block";
 
       location /static {
           # serve static files as normal
