--- a/{{ cookiecutter.project_slug }}/backend_app/requirements.in
+++ b/{{ cookiecutter.project_slug }}/backend_app/requirements.in
@@ -5,6 +5,7 @@ django-cors-headers>=3.2.1
 django-environ>=0.4.5
 django-extensions>=2.2.5
 djangorestframework>=3.11.0
+djangorestframework-simplejwt>=4.4.0
 flake8>=3.7.8
 gunicorn>=19.9.0
 ipython>=7.11.1
