--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -6,6 +6,7 @@ backend_app_vagrant_mount: true
 backend_app_debug: true
 backend_app_database_host: "172.17.177.22"
 backend_app_secret_key: "$DJANGO SECRET KEY$"
+backend_app_jwt_signing_key: "$JWT SIGNING KEY$"
 backend_app_cors_origin_whitelist:
   - "https://{{ frontend_server_name }}"
   - "http://localhost:3000"
