--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
@@ -12,8 +12,12 @@
 ## See README.txt - store sensitive variables like this using ansible vault
 #database_password: "<your-production-database-password>"
 #
-#firewalld_backend_ip_addresses:
-# - <your-production-backend-ip-address>
+# firewalld_zones:
+#  - name: backend
+#    ip_addresses:
+#     - <your-production-backend-ip-address>
+#
+# firewalld_additional_rules: []
 #
 #ssl_provider: 'certbot'
 #ssl_certbot_email: '<your-certbot-notification-email>'
