--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
@@ -34,7 +34,7 @@
     keep_releases: 10
   when: not backend_app_vagrant_mount | bool
 
-- name: add rc file which can be used to activate the virtualenv
+- name: add .venvrc file that can be used to activate the virtualenv
   become: true
   become_user: "{{ backend_app_user }}"
   template:
