Remove redundant rcfile argument for coverage.

--- a/{{ cookiecutter.project_slug }}/backend_app/Makefile
+++ b/{{ cookiecutter.project_slug }}/backend_app/Makefile
@@ -3,7 +3,7 @@
 
 test:
 	. ~/.venvrc
-	coverage run --rcfile=".coveragerc" manage.py test
+	coverage run manage.py test
 	coverage html
 	echo Coverage html report written to coverage_html_report/index.html
 	coverage erase
