Remove venv bind mounting in the Vagrant dev environment.
The virtualenv location is now defined by the 'backend_app_virtualenv_dir' variable, and is now
located alongside the vagrant mounted folder in dev environments.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/collect_static.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/collect_static.yml
@@ -6,7 +6,7 @@
   django_manage:
     command: "collectstatic --clear --noinput"
     app_path: "{{ backend_app_deploy_helper.new_release_path }}"
-    virtualenv: "{{ backend_app_deploy_helper.new_release_path }}/venv"
+    virtualenv: "{{ backend_app_virtualenv_dir }}"
   register:
     django_manage_collectstatic
 
