--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/migrate_db.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/migrate_db.yml
@@ -7,7 +7,7 @@
   django_manage:
     command: "migrate --noinput"
     app_path: "{{ backend_app_deploy_helper.current_path }}"
-    virtualenv: "{{ backend_app_deploy_helper.current_path }}/venv"
+    virtualenv: "{{ backend_app_virtualenv_dir }}"
   register:
     django_manage_migrate
 
