--- a/{{ cookiecutter.project_slug }}/provisioning/ansible.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible.cfg
@@ -4,6 +4,7 @@ roles_path = galaxy_roles:roles
 callback_whitelist = timer, profile_roles
 stdout_callback = yaml
 force_color = yes
+any_errors_fatal = yes
 
 [ssh_connection]
 pipelining = True
