--- a/{{ cookiecutter.project_slug }}/frontend_app/package.json
+++ b/{{ cookiecutter.project_slug }}/frontend_app/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/dom": "^6.15.0",
+    "@testing-library/jest-dom": "^5.1.0",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
+    "@testing-library/user-event": "^10.0.0",
+    "@types/jest": "^25.1.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
@@ -15,8 +16,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
+    "react-scripts": "3.4.0",
+    "typescript": "~3.8.3"
   },
   "scripts": {
     "start": ". ./set_dev_env_vars.sh && react-scripts start",
