--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -129,10 +129,7 @@ Vagrant.configure("2") do |config|
     $controller_vm_setup_script = <<-SCRIPT
       sudo hostnamectl set-hostname {{ cookiecutter.controller_hostname }}
       # install ansible requirements
-      for package in 'epel-release' 'python36' 'python3-pip' 'sshpass' 'openssl-devel';
-        do
-          rpm -q $package &> /dev/null || sudo dnf install -y $package
-        done
+      sudo dnf install -y epel-release python36 python3-pip sshpass openssl-devel
       pip3 install -r /vagrant/provisioning/requirements.txt --user
     SCRIPT
 
