--- a/{{ cookiecutter.project_slug }}/.editorconfig
+++ b/{{ cookiecutter.project_slug }}/.editorconfig
@@ -13,12 +13,7 @@ indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{js,jsx,ts,tsx}]
-indent_style = space
-indent_size = 2
-trim_trailing_whitespace = true
-
-[*.yml]
+[*.{js,jsx,ts,tsx,css,yml}]
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
