--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -3,6 +3,19 @@
 
 Vagrant.require_version ">= 2.2.5"
 
+if Vagrant.has_plugin?("vagrant-vbguest") then
+  class CustomVbGuestInstaller < VagrantVbguest::Installers::CentOS
+    def install(opts=nil, &block)
+      communicate.sudo('yum -y update', opts, &block)
+      communicate.sudo('shutdown -r now', opts, &block)
+      begin
+        sleep 5
+      end until communicate.ready?
+      super
+    end
+  end
+end
+
 if Vagrant::Util::Platform.windows? then
   def running_as_admin?
     # query the LOCAL SERVICE account reg key (requires admin privileges)
@@ -24,10 +37,6 @@ Vagrant.configure("2") do |config|
   ]
   config.vm.box = "centos/8"
   config.vm.box_check_update = false
-  # The "centos/8" vagrant box download url seems to be broken for the moment following
-  # the release of CentOS 8.1, so we explicitly set the correct box url.
-  # See https://bugs.centos.org/view.php?id=16931
-  config.vm.box_url = "http://cloud.centos.org/centos/8/x86_64/images/CentOS-8-Vagrant-8.1.1911-20200113.3.x86_64.vagrant-virtualbox.box"
   # disable the default vagrant mount. We configure custom mounts on the VM separately.
   config.vm.synced_folder ".", "/vagrant", disabled: true
 
@@ -43,7 +52,11 @@ Vagrant.configure("2") do |config|
   config.proxy.http = "{{ cookiecutter.vagrant_http_proxy }}"
   config.proxy.https = "{{ cookiecutter.vagrant_https_proxy }}"
 
-  config.vbguest.auto_update = true
+  if Vagrant.has_plugin?("vagrant-vbguest") then
+    config.vbguest.installer = CustomVbGuestInstaller
+    config.vbguest.auto_update = true
+  end
+
   config.hostmanager.enabled = true
   config.hostmanager.manage_host = true
   config.hostmanager.manage_guest = true
