--- a/{{ cookiecutter.project_slug }}/backend_app/Makefile
+++ b/{{ cookiecutter.project_slug }}/backend_app/Makefile
@@ -4,9 +4,11 @@
 test:
 	. ~/.venvrc
 	coverage run manage.py test
+	TEST_EXIT_CODE=$$?;
 	coverage html
 	echo Coverage html report written to coverage_html_report/index.html
 	coverage erase
+	exit $$TEST_EXIT_CODE
 
 format:
 	. ~/.venvrc
