--- a/{{ cookiecutter.project_slug }}/backend_app/requirements.in
+++ b/{{ cookiecutter.project_slug }}/backend_app/requirements.in
@@ -1,13 +1,13 @@
-black>=20.8b1
-coverage[toml]>=5.2.1
-Django>=3.1.1
-django-cors-headers>=3.5.0
-django-environ>=0.4.5
-django-extensions>=3.0.8
-djangorestframework>=3.11.1
-flake8>=3.8.3
-gunicorn>=19.9.0
-ipython>=7.16.1
-psycopg2-binary>=2.8.3
-safety>=1.9.0
-selenium>=3.141.0
+black
+coverage[toml]
+Django
+django-cors-headers
+django-environ
+django-extensions
+djangorestframework
+flake8
+gunicorn
+ipython
+psycopg2-binary
+safety
+selenium
