--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -15,8 +15,9 @@
     virtualenv: "{{ backend_app_virtualenv_dir }}"
     virtualenv_command: /usr/bin/python3.8 -m venv
     name:
-      - pip==20.0.2
-      - pip-tools==5.0.0
+      - pip==20.2.4
+      - pip-tools==5.3.1
+      - setuptools==50.3.2
 
 - name: install requirements using pip-sync
   become: true
